name:                caverunner
version:             0.98
-- synopsis:
-- description:
homepage:            https://github.com/simonmichael/games/tree/main/caverunner
bug-reports:         https://github.com/simonmichael/games/issues
license:             BSD3
license-file:        LICENSE
author:              Simon Michael <simon@joyful.com>
maintainer:          Simon Michael <simon@joyful.com>
copyright:           (c) Simon Michael, 2021
category:            Games
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
    README.md
--  CHANGES.md

executable caverunner
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:
      base >= 4.7 && < 5
    , ansi-terminal
    , ansi-terminal-game >= 1.6 && < 1.7
    , containers
    , directory
    , extra
    , filepath
    , pretty-show
    , pretty-simple
    , safe
    , time
    , typed-process
